# sparseEval

./: CMakeLists.txt  LassenFinal.csv  LassenFinalCSR.csv  LassenLowDensity.csv  LassenScales-results.csv  QuartzFinal.csv  QuartzLowDensity.csv  analysis.py  lassen-results.csv  lassen-results2.csv  lassen-results3.csv  lassen_results2.csv  quartz-results.csv  quartz-results2.csv  quartz-scales-results.csv  results.csv  results1.csv  results10.csv  results11.csv  results12.csv  results13.csv  results14.csv  results15.csv  results16.csv  results17.csv  results2.csv  results3.csv  results4.csv  results5.csv  results6.csv  results7.csv  results8.csv  results9.csv  run.sh
LassenPushProfiling-database/: experiment.xml
LassenPushProfiling2-database/: experiment.xml
LassenPushProfiling3-database/: experiment.xml
LassenScaleProfile-database/: experiment.xml
Quartz512-database-52920/: experiment.xml
Quartz512-reverted/: experiment.xml
forBronis-database/: experiment.xml
forBronis2/: sparseEval.exe-000000-000-a8c0ef42-31865-0.hpcrun
forBronis2-database/: experiment.xml
forBronis3-database/: experiment.xml
forBronis4/: sparseEval.exe-000000-000-a8c08941-161187-0.hpcrun
forBronis4-database/: experiment.xml
forBronis6-database/: experiment.xml
forBronis7-database/: experiment.xml
hpctoolkit-database-52120/: experiment.xml
hpctoolkit-sparseEval.exe-database/: experiment.xml
hpctoolkit-sparseEval.exe-database-4849936/: experiment.xml
hpctoolkit-sparseEval.exe-database-4849936-4849936/: experiment.xml
lassen-profiling-database/: experiment.xml
(+59 files in other folders)
